ModalContent: Table lightbox uses the wrong font size and line spacing (bugid:1042)
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@37893 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/skins/oasis/css/core/_modal.scss
+++ b/skins/oasis/css/core/_modal.scss
@@ -1,6 +1,3 @@
-@import "../mixins/box-shadow";
-@import "../mixins/clearfix";
-
 .modalWrapper {
 	@include box-shadow(0, 10px, 60px, mix($color-page, #000));
 	background: $color-page;
@@ -37,6 +34,7 @@
 
 .modalContent {
 	@include clearfix;
+	@include bodytext;
 	display: block;
 }
 
